net/hiwifi_iptables.log
# Generated by iptables-save v1.4.10 on Tue May  5 15:02:32 2015
*nat
:PREROUTING ACCEPT [176801:24518466]
:INPUT ACCEPT [3997:289503]
:OUTPUT ACCEPT [10220:770291]
:POSTROUTING ACCEPT [5915:395831]
:MINIUPNPD - [0:0]
:miniupnpd_fromlan - [0:0]
:miniupnpd_tolan - [0:0]
:nat_reflection_in - [0:0]
:nat_reflection_out - [0:0]
:postrouting_rule - [0:0]
:prerouting_lan - [0:0]
:prerouting_lan1 - [0:0]
:prerouting_rule - [0:0]
:prerouting_wan - [0:0]
:ss-redir-output - [0:0]
:ss-redir-pre - [0:0]
:ssbf3-pre - [0:0]
:ssgoabroadng-output - [0:0]
:ssgoabroadng-pre - [0:0]
:sslol-pre - [0:0]
:zone_lan1_nat - [0:0]
:zone_lan1_prerouting - [0:0]
:zone_lan_nat - [0:0]
:zone_lan_prerouting - [0:0]
:zone_wan_nat - [0:0]
:zone_wan_prerouting - [0:0]
-A PREROUTING -j prerouting_rule 
-A PREROUTING -i br-lan -j zone_lan_prerouting 
-A PREROUTING -i br-lan -j ss-redir-pre 
-A PREROUTING -i eth2.2 -j zone_wan_prerouting 
-A OUTPUT -j ss-redir-output 
-A POSTROUTING -j postrouting_rule 
-A POSTROUTING -o br-lan -j zone_lan_nat 
-A POSTROUTING -o eth2.2 -j zone_wan_nat 
-A postrouting_rule -j miniupnpd_tolan 
-A postrouting_rule -j nat_reflection_out 
-A prerouting_rule -j nat_reflection_in 
-A ss-redir-output -j ssgoabroadng-output 
-A ss-redir-pre -m salist  --salist local --match-dip -j RETURN 
-A ss-redir-pre -m salist  --salist hiwifi --match-dip -j RETURN 
-A ss-redir-pre -j ssgoabroadng-pre 
-A ss-redir-pre -j ssbf3-pre 
-A ss-redir-pre -j sslol-pre 
-A zone_lan1_prerouting -j prerouting_lan1 
-A zone_lan_prerouting -j miniupnpd_fromlan 
-A zone_lan_prerouting -j prerouting_lan 
-A zone_wan_nat -j MASQUERADE 
-A zone_wan_prerouting -j MINIUPNPD 
-A zone_wan_prerouting -j prerouting_wan 
COMMIT
# Completed on Tue May  5 15:02:32 2015
# Generated by iptables-save v1.4.10 on Tue May  5 15:02:32 2015
*raw
:PREROUTING ACCEPT [2500513:1829443122]
:OUTPUT ACCEPT [233369:121378912]
:zone_lan1_notrack - [0:0]
:zone_lan_notrack - [0:0]
:zone_wan_notrack - [0:0]
-A PREROUTING -i br-lan -j zone_lan_notrack 
-A PREROUTING -i eth2.2 -j zone_wan_notrack 
COMMIT
# Completed on Tue May  5 15:02:32 2015
# Generated by iptables-save v1.4.10 on Tue May  5 15:02:32 2015
*mangle
:PREROUTING ACCEPT [2500068:1829110532]
:INPUT ACCEPT [289672:99026590]
:FORWARD ACCEPT [2139461:1714420769]
:OUTPUT ACCEPT [233093:121284908]
:POSTROUTING ACCEPT [2372843:1835774341]
:zone_wan_MSSFIX - [0:0]
-A PREROUTING -p udp -m udp --dport 53 -j MARK --set-xmark 0x1000000/0xffffffff 
-A PREROUTING -p udp -m udp --dport 53 -j QOSMARK --set-xmark 0x1000000/0xffffffff 
-A FORWARD -j zone_wan_MSSFIX 
-A OUTPUT -p udp -m udp --dport 53 -j MARK --set-xmark 0x1000000/0xffffffff 
-A OUTPUT -p udp -m udp --dport 53 -j QOSMARK --set-xmark 0x1000000/0xffffffff 
-A zone_wan_MSSFIX -o eth2.2 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu 
COMMIT
# Completed on Tue May  5 15:02:32 2015
# Generated by iptables-save v1.4.10 on Tue May  5 15:02:32 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:MINIUPNPD - [0:0]
:forward - [0:0]
:forwarding_lan - [0:0]
:forwarding_lan1 - [0:0]
:forwarding_rule - [0:0]
:forwarding_wan - [0:0]
:input - [0:0]
:input_lan - [0:0]
:input_lan1 - [0:0]
:input_rule - [0:0]
:input_wan - [0:0]
:miniupnpd_fwd - [0:0]
:nat_reflection_fwd - [0:0]
:output - [0:0]
:output_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_lan - [0:0]
:zone_lan1 - [0:0]
:zone_lan1_ACCEPT - [0:0]
:zone_lan1_DROP - [0:0]
:zone_lan1_REJECT - [0:0]
:zone_lan1_forward - [0:0]
:zone_lan_ACCEPT - [0:0]
:zone_lan_DROP - [0:0]
:zone_lan_REJECT - [0:0]
:zone_lan_forward - [0:0]
:zone_wan - [0:0]
:zone_wan_ACCEPT - [0:0]
:zone_wan_DROP - [0:0]
:zone_wan_REJECT - [0:0]
:zone_wan_forward - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood 
-A INPUT -j input_rule 
-A INPUT -j input 
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -j forwarding_rule 
-A FORWARD -j forward 
-A FORWARD -j reject 
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -j output_rule 
-A OUTPUT -j output 
-A forward -i br-lan -j zone_lan_forward 
-A forward -i eth2.2 -j zone_wan_forward 
-A forwarding_rule -j miniupnpd_fwd 
-A forwarding_rule -j nat_reflection_fwd 
-A input -p tcp -m tcp --dport 8080 -j zone_wan_ACCEPT 
-A input -i br-lan -j zone_lan 
-A input -i eth2.2 -j zone_wan 
-A output -j zone_lan_ACCEPT 
-A output -j zone_wan_ACCEPT 
-A output -j zone_lan1_ACCEPT 
-A reject -p tcp -j REJECT --reject-with tcp-reset 
-A reject -j REJECT --reject-with icmp-port-unreachable 
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -j RETURN 
-A syn_flood -j DROP 
-A zone_lan -j input_lan 
-A zone_lan -j zone_lan_ACCEPT 
-A zone_lan1 -p udp -m udp --dport 67 -j ACCEPT 
-A zone_lan1 -p udp -m udp --dport 53 -j ACCEPT 
-A zone_lan1 -p tcp -m tcp --dport 53 -j ACCEPT 
-A zone_lan1 -j input_lan1 
-A zone_lan1 -j zone_lan1_REJECT 
-A zone_lan1_forward -j zone_wan_ACCEPT 
-A zone_lan1_forward -j forwarding_lan1 
-A zone_lan1_forward -j zone_lan1_REJECT 
-A zone_lan_ACCEPT -o br-lan -j ACCEPT 
-A zone_lan_ACCEPT -i br-lan -j ACCEPT 
-A zone_lan_DROP -o br-lan -j DROP 
-A zone_lan_DROP -i br-lan -j DROP 
-A zone_lan_REJECT -o br-lan -j reject 
-A zone_lan_REJECT -i br-lan -j reject 
-A zone_lan_forward -j zone_wan_ACCEPT 
-A zone_lan_forward -j forwarding_lan 
-A zone_lan_forward -j zone_lan_REJECT 
-A zone_wan -p udp -m udp --dport 68 -j ACCEPT 
-A zone_wan -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A zone_wan -p icmp -m icmp --icmp-type 3 -j ACCEPT 
-A zone_wan -j input_wan 
-A zone_wan -j zone_wan_REJECT 
-A zone_wan_ACCEPT -o eth2.2 -j ACCEPT 
-A zone_wan_ACCEPT -i eth2.2 -j ACCEPT 
-A zone_wan_DROP -o eth2.2 -j DROP 
-A zone_wan_DROP -i eth2.2 -j DROP 
-A zone_wan_REJECT -o eth2.2 -j reject 
-A zone_wan_REJECT -i eth2.2 -j reject 
-A zone_wan_forward -j MINIUPNPD 
-A zone_wan_forward -j forwarding_wan 
-A zone_wan_forward -j zone_wan_REJECT 
COMMIT
# Completed on Tue May  5 15:02:32 2015
